# memorizz

./: .python-version  ASYNC_USAGE_GUIDE.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  OPTIMIZATION_REPORT_MEMORIZZ.md  README.md  howto.md  pyproject.toml  streaming_examples.py  test_planner_integration.py  test_planner_standalone.py  test_streaming.py
.claude/.claude/sessions/: .current-session  2025-10-27-1304.md
eval/longmemeval/: evaluate_hierarchical_pattern.py
examples/: azure-demo.py  memagent_summarisation.ipynb  persona.ipynb  semantic_cache.ipynb
src/memorizz/: memagent.py
src/memorizz/concurrency/: executors.py
src/memorizz/database/mongodb/: mongodb_tools.py
src/memorizz/dispatch/: task_dispatcher.py  threadpool_dispatcher.py
src/memorizz/embeddings/: __init__.py  async_provider.py
src/memorizz/embeddings/azure/: __init__.py  provider.py
src/memorizz/embeddings/huggingface/: __init__.py  provider.py
src/memorizz/llms/: __init__.py  azure.py  grok.py  llm_factory.py  llm_provider.py  openai.py
src/memorizz/long_term_memory/procedural/toolbox/: tool_schema.py  toolbox.py
src/memorizz/long_term_memory/procedural/workflow/: workflow.py
src/memorizz/memory_provider/mongodb/: __init__.py  async_provider.py  provider.py
src/memorizz/memory_unit/: memory_unit.py
src/memorizz/planner_exec/: ANALYSIS.md  INTEGRATION.md  README.md  __init__.py  examples.py  executor.py  plan_step.py  planner.py  run_plan.py  test_basic.py  tool_spec.py
src/memorizz/utils/: lru.py
