[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorizz"
version = "0.0.32"
description = "A memory management library for Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Richmond Alake", email = "richmond.alake@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# —— Base deps only (safe across 3.7+) ——
dependencies = [
    "openai",
    "pymongo",
    # NumPy wheels by Python version:
    "numpy==1.21.6; python_version < '3.9'",
    "numpy>=1.26.4,<3.0; python_version >= '3.9'",
]


# —— Optional provider extras with Python markers ——
[project.optional-dependencies]
huggingface = [
    "sentence-transformers>=3,<4; python_version >= '3.8'",
    "huggingface-hub>=0.34.4,<0.35; python_version >= '3.8'"
]
voyageai = [
    "voyageai; python_version >= '3.9' and python_version < '3.14'"
]
ollama = [
    "ollama; python_version >= '3.8' and python_version < '4.0'",
    "langchain-ollama; python_version >= '3.9' and python_version < '4.0'"
]
xai = [
  "httpx>=0.27,<0.28"  # used below; you can swap for 'openai>=1.40' if you prefer its OpenAI-compatible client
]


[project.urls]
"Homepage" = "https://github.com/RichmondAlake/memorizz"
"Bug Tracker" = "https://github.com/RichmondAlake/memorizz/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
exclude = ["temp_unpack*"]